--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "svg-captcha": "^1.2.1",
-    "ueditor": "^1.2.0"
+    "ueditor": "^1.2.0",
+    "cors": "^2.8.4",
+    "http-proxy-middleware": "^0.18.0"
   }
 }
